# TrajectoryDiff

./: .gitignore  CITATION.bib  CLAUDE.md  LICENSE  README.md  environment.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: config.yaml
configs/data/: radiomapseer.yaml
configs/experiment/: ablation_no_coverage_attention.yaml  ablation_no_coverage_density.yaml  ablation_no_physics_loss.yaml  ablation_no_trajectory_mask.yaml  ablation_no_tx_position.yaml  ablation_small_unet.yaml  coverage_sweep_10pct.yaml  coverage_sweep_1pct.yaml  coverage_sweep_20pct.yaml  coverage_sweep_5pct.yaml  cross_eval_traj_to_uniform.yaml  cross_eval_uniform_to_traj.yaml  num_trajectories_sweep.yaml  radio_unet.yaml  rmdm_baseline.yaml  supervised_unet.yaml  trajectory_baseline.yaml  trajectory_full.yaml  uniform_baseline.yaml
configs/model/: trajectory_diffusion.yaml
configs/training/: default.yaml
docs/: NEXT_STEPS.md  PLAN.md  RESULTS.md  WHAT_WE_BUILT.md  cvpr_audit_report.md  dataset_notes.md  metrics.md
notebooks/: 01_data_exploration.ipynb
scripts/: aggregate_results.py  analysis_bootstrap_ci.py  analysis_per_building.py  analyze_uncertainty.py  download_data.py  evaluate.py  generate_figures.py  gpu_validation.sh  run_baselines.py  run_baselines_cpu.sh  run_evaluation.sh  run_experiments.sh  run_kriging_eval.sh  smoke_test.py  smoke_test_quick.py  submit_all.sh  submit_all_evaluations.sh  submit_baselines.sh  submit_ddim_ablation.sh  submit_ddim_t100.sh  submit_evaluation.sh  submit_experiment.sh  submit_noise_sensitivity.sh  submit_noise_sigma8.sh  submit_uncertainty_ensemble.sh  train.py  train_supervised.py
src/data/: __init__.py  datamodule.py  dataset.py  floor_plan.py  trajectory_sampler.py  transforms.py
src/evaluation/: metrics.py
src/models/baselines/: __init__.py  interpolation.py  radio_unet.py  rmdm.py  supervised_unet.py
src/models/diffusion/: __init__.py  attention.py  coverage_unet.py  ddpm.py  unet.py
src/models/encoders/: __init__.py  condition_encoder.py
src/training/: __init__.py  callbacks.py  diffusion_module.py  inference.py  losses.py
src/utils/: visualization.py
tests/: test_attention.py  test_coverage_unet.py  test_data_pipeline.py  test_diffusion.py  test_inference.py  test_integration.py  test_losses.py  test_metrics.py  test_training.py
