[project]
name = "trajectorydiff"
version = "0.1.0"
description = "Trajectory-Conditioned Diffusion Models for Indoor Radio Map Generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yaqoob Ansari", email = "ansarimohammedyaqoob01@gmail.com"}
]
keywords = [
    "radio-map",
    "diffusion-models",
    "deep-learning",
    "localization",
    "trajectory",
    "wireless"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "torchvision",
    "lightning>=2.0",
    "hydra-core>=1.3",
    "omegaconf",
    "wandb",
    "numpy",
    "scipy",
    "scikit-image",
    "matplotlib",
    "seaborn",
    "pandas",
    "h5py",
    "tqdm",
    "einops",
    "timm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]
graph = [
    "torch-geometric",
]

[project.urls]
homepage = "https://github.com/YaqoobAnsari/TrajectoryDiff"
repository = "https://github.com/YaqoobAnsari/TrajectoryDiff"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | experiments
    | data
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "experiments",
    "data",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "experiments/",
    "data/",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
